added markdown link check in build script

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,20 @@ steps:
     }
   displayName: 'Set chapter header counters'
 
+- task: NodeTool@0
+  inputs:
+    versionSpec: '8.x'
+  displayName: 'Install Node.js'
+
+- script: 'npm install -g markdown-link-check'
+  displayName: 'Install markdown-link-check'
+   
+- task: PowerShell@1
+  displayName: 'Check links'
+  inputs:
+    scriptName: 'scripts/MarkdownLinkCheck.ps1'
+    workingFolder: scripts'
+
 - powershell: |
     # The current latest version 0.12.5 contains a bug that prevents the creation of TOCs
     # Specific version can be removed as soon as 0.12.6 is released
