--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,7 +57,7 @@ steps:
 
 - powershell: |
     Set-ExecutionPolicy Bypass -Scope Process -Force; iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
-    choco install docfx -y
+    choco install docfx --version 2.40.7 --allow-downgrade -y
     docfx
 
 #- task: chrismason.vsts-docfxtasks.docfx-extension-build-task.DocFxTask@0
