Specfy version for DocFx explicitly
It seems like 2.42 broke the PDF generation which requires us to use version 2.41. To make sure we install the right one the version is defined explicitly.

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ steps:
     # The current latest version 0.12.5 contains a bug that prevents the creation of TOCs
     # Specific version can be removed as soon as 0.12.6 is released
     choco install wkhtmltopdf --version 0.12.4.20170325 --allow-downgrade -y
-    choco install docfx -y
+    choco install docfx --version 2.41 -y
     nuget install DocFx.Plugins.PlantUml -ExcludeVersion -OutputDirectory .
   displayName: 'Install prerequisites'
 
