--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,7 +30,7 @@ steps:
 
 - task: NodeTool@0
   inputs:
-    versionSpec: '8.x'
+    checkLatest: true
   displayName: 'Install Node.js'
 
 - script: 'npm install -g markdown-link-check'
