--- a/markdown-link-check.config.json
+++ b/markdown-link-check.config.json
@@ -3,6 +3,7 @@
     { "pattern": "^https?://signaturcloud\\.fiskaltrust\\.at/?$" },
     { "pattern": "^https?://signaturcloud\\.fiskaltrust\\.fr/?$" },
     { "pattern": "^https?://helipad\\.fiskaltrust\\.cloud/?$" },
-    { "pattern": "^https?://packages\\.fiskaltrust\\.cloud/?$" }
+    { "pattern": "^https?://packages\\.fiskaltrust\\.cloud/?$" },
+    { "pattern": "^https?://eur-lex\\.europa\\.eu/?$" }
   ]
 }
