--- a/markdown-link-check.config.json
+++ b/markdown-link-check.config.json
@@ -4,6 +4,6 @@
     { "pattern": "^https?://signaturcloud\\.fiskaltrust\\.fr/?$" },
     { "pattern": "^https?://helipad\\.fiskaltrust\\.cloud/?$" },
     { "pattern": "^https?://packages\\.fiskaltrust\\.cloud/?$" },
-    { "pattern": "^https?://eur-lex\\.europa\\.eu/?$" }
+    { "pattern": "^https?://eur-lex\\.europa\\.eu.*" }
   ]
 }
