--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,7 +14,7 @@ steps:
     versionSpec: '>=12.x'
   displayName: 'Install Node.js'
 
-- script: 'npm install -g markdown-link-check'
+- script: 'npm install -g markdown-link-check@3.10.3'
   displayName: 'Install markdown-link-check'
    
 - powershell: |
