--- a/markdown-link-check.config.json
+++ b/markdown-link-check.config.json
@@ -13,6 +13,7 @@
     { "pattern": "^https?://receipts\\.fiskaltrust\\.cloud.*" },
     { "pattern": "^https?://receipts-sandbox\\.fiskaltrust\\.cloud.*" },
     { "pattern": "^https?://eur-lex\\.europa\\.eu.*" },
-    { "pattern": "^https?://www.bundesfinanzministerium\\.de.*" }
+    { "pattern": "^https?://www.bundesfinanzministerium\\.de.*" },
+    { "pattern": "^https?://install\\.appcenter\\.ms.*" }
   ]
 }
