Fixed broken links

--- a/markdown-link-check.config.json
+++ b/markdown-link-check.config.json
@@ -14,6 +14,7 @@
     { "pattern": "^https?://receipts-sandbox\\.fiskaltrust\\.cloud.*" },
     { "pattern": "^https?://eur-lex\\.europa\\.eu.*" },
     { "pattern": "^https?://www.bundesfinanzministerium\\.de.*" },
-    { "pattern": "^https?://install\\.appcenter\\.ms.*" }
+    { "pattern": "^https?://bofip\\.impots\\.gouv\\.fr.*" },
+    { "pattern": "^https?://install\\.appcenter\\.ms.*" }   
   ]
 }
