--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ steps:
 - task: NodeTool@0
   inputs:
     checkLatest: true
-    versionSpec: '16.x'
+    versionSpec: '20.17.0'
   displayName: 'Install Node.js'
 
 - script: 'npm install -g markdown-link-check@3.11.2'
