Add Google Play URL pattern to markdown link check configuration

--- a/markdown-link-check.config.json
+++ b/markdown-link-check.config.json
@@ -15,6 +15,7 @@
     { "pattern": "^https?://eur-lex\\.europa\\.eu.*" },
     { "pattern": "^https?://www.bundesfinanzministerium\\.de.*" },
     { "pattern": "^https?://bofip\\.impots\\.gouv\\.fr.*" },
-    { "pattern": "^https?://install\\.appcenter\\.ms.*" }   
+    { "pattern": "^https?://install\\.appcenter\\.ms.*" },
+    { "pattern": "^https?://play\\.google\\.com\\*" }
   ]
 }
